test/invalid/baseline/legacyiterable.txt
Syntax error at line 2 in legacyiterable.widl, since `interface LegacyIterable`:
  legacyiterable<long>;
  ^ Missing return type
